# MRS

./: README.md  monitor.sh
SuperCoolJoy/: CMakeLists.txt  README.md  package.xml
SuperCoolJoy/launch/: lancar_normal.launch
SuperCoolJoy/src/: escutadeiro_node.cpp  joy_node.cpp
camera_base/include/camera_base/: camera_ros_base.h
controle_gimbal_automatico/: controle_automatico.cpp
controle_gimbal_automatico/launch/: lancar_gimbal.launch
controle_gimbal_automatico/src/: controle_automatico.cpp  sincroniza_dyn.cpp
conversor_kml_wp/: SendWP.py  kml_waypoints.py  send_wp.py
conversor_kml_wp/build-conversor_kml_wp-Desktop-Debug/: Makefile  conversor_kml_wp  moc_mainwindow.cpp  ui_mainwindow.h
conversor_kml_wp/build-conversor_kml_wp-Desktop-Release/: Makefile  conversor_kml_wp  moc_mainwindow.cpp  ui_mainwindow.h
conversor_kml_wp/conversor_kml_wp/: Makefile  conversor_kml_wp  conversor_kml_wp.pro  conversor_kml_wp.pro.user.7d215aa  conversor_kml_wp.pro.user.8fa1ca6.4.8-pre1  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp
dynamixel-workbench/dynamixel_workbench_controllers/include/dynamixel_workbench_controllers/: multi_port.h
dynamixel-workbench/dynamixel_workbench_controllers/launch/: multi_port.launch
dynamixel-workbench/dynamixel_workbench_controllers/src/: multi_port.cpp  position_control.cpp
dynamixel-workbench/dynamixel_workbench_single_manager/launch/: single_monitor.launch
flir_gige/: flir_ajuda.txt  readme.txt
flir_gige/cmake/: FindEbus.cmake
flir_gige/include/flir_gige/: flir_gige.h
flir_gige/install/: set_puregev_gen
flir_gige/src/flir_gige/: flir_gige.cpp
flir_gige/src/thermal_proc/: thermal_proc_node.cpp
guiROS/: CMakeLists.txt  mainpage.dox  package.xml
guiROS/include/guiROS/: GigeImageReader.hpp  main_window.hpp  qnode.hpp
guiROS/src/: GigeImageReader.cpp  main.cpp  main_window.cpp  qnode.cpp
guiROS/ui/: main_window.ui
monitor_mrs/: CMakeLists.txt  package.xml
monitor_mrs/include/monitor_mrs/: GigeImageReader.hpp  main_window.hpp  qnode.hpp
monitor_mrs/launch/: monitor.launch
monitor_mrs/resources/: images.qrc  salvacao_do_mundo.rviz  salvacao_do_mundo_2.rviz  salvacao_do_mundo_termica.rviz  salvacao_do_mundo_termica_inst.rviz
monitor_mrs/src/: GigeImageReader.cpp  main.cpp  main_window.cpp  qnode.cpp
monitor_mrs/ui/: main_window.ui
mrs_ocv/: CMakeLists.txt  mrslistener.cpp  package.xml
projecao_overlap/: CMakeLists.txt  package.xml
projecao_overlap/launch/: dados_artigo.launch  projecao_overlap.launch
projecao_overlap/src/: dadosComZed.cpp  projecao_overlap.cpp  sincroniza_odometrias.cpp
regiao_trem/: CMakeLists.txt  package.xml
regiao_trem/src/: regiao_limite.cpp
termica_reconstrucao/: CMakeLists.txt
termica_reconstrucao/launch/: reconstrucao_teste.launch  reconstrucao_teste2.launch  teste.launch
termica_reconstrucao/src/: acumula_termica.cpp  dadosComZed.cpp  dadosSalvar.py  grabber.cpp  imTermicaScaled.py  imTermicaScaledOnline.py  projeta_termica.cpp  reconstrucao.cpp  reconstrucaoF.cpp  reconstrucaoTermica_acumular.cpp  reconstrucao_online.cpp  reconstrucao_termica.cpp  salvaInfoReconstrucaoTermica.cpp  termica_cor.cpp  todo.cpp
